# weather_web

./: Cargo.toml  README.md  diagram.puml  queries.sql
.github/workflows/: rust.yml
src/: controller.rs  lib.rs  main.rs  models.rs  schema.rs  test.rs
