[package]
name = "weather_web"
version = "0.1.0"
authors = ["Claus Guttesen <kometen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
actix-rt = "2"
openssl = { version = "0.10", features = ["v111"]}
serde = "1"
serde_json = "1"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
chrono = "0.4.19"
